--- a/changes.txt
+++ b/changes.txt
@@ -1,8 +1,12 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
-- IIndexBuffer has some interface changes: pointer() deprecated (was same as getData()). Adding a const version of getData(). 
-  Also some functions no longer use references but copy by value which shouldn't be slower for this and is safer to use.
+- Fix CVertexBuffer::setType switching types for non-empty arrays. Before we had some bad casts which could result in random initializing of some vertex data.
+- IVertexBuffer interface changes: pointer() now returns void*. Adding a const version of getData(). Some set functions have now overload for all vertex types.
+- S3DVertex now always initializes color to 0xffffff. That was previously the only uninitialized variable in there. Also both derived classes have now a constructor taking a const S3DVertex&.
+- Fix deserialization in CGUITable. Use now getAttributeAsStringW instead of getAttributeAsString. 
+  Thanks @chronologicaldot for report and patch: https://irrlicht.sourceforge.io/forum/viewtopic.php?f=7&t=52821
+- IIndexBuffer interface changes: Adding a const version of getData(). Some set functions now copy by value instead of per reference, which shouldn't be slower for this and is safer to use.
 - Fix CIndexBuffer::setType going from 16 to 32 bit. This had some casts which simply could mess up the results.
 - Fix OSX nor resizing properly. Thanks @torleif, Jordach and sfan5 for patch and report: https://irrlicht.sourceforge.io/forum/viewtopic.php?f=2&t=52819
 - X meshloader fixes bug with uninitialized normals. Thanks @sfan5 for patch: https://irrlicht.sourceforge.io/forum/viewtopic.php?f=2&t=52819
