--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,9 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Bugfix: IGUIElement::getNextElement now passing includeInvisible and includeDisabled flags recursively instead of disabling those for children.
+  This fixes problems that elements sometimes didn't get a tab order because some parent was invisible and so tab'ing for them failed completely.
+  Also setTabOrder(-1) now also checks for disabled elements for the same reason (disabled parent causing children to not get a tab-order).
 - Fix MouseButtonStates for mouse events in CIrrDeviceSDL when middle or right button are released.
 - CGUIContextMenu no longer marks EMIE_MOUSE_MOVED as handled
 - core::array::linear_search and linear_reverse_search can now work with any types as long as corresponding operator== is implemented.
